implement Cart UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,15 +15,17 @@
         android:theme="@style/Theme.FoodieApp"
         tools:targetApi="31">
         <activity
+            android:name=".presentation.view.activity.CartActivity"
+            android:exported="false" />
+        <activity
             android:name=".presentation.view.activity.SplashActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".presentation.view.activity.SignUpActivity"
             android:exported="false" />
